<resources>
    <string name="app_name">Facebook</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="create_an_acount">Create An Acount ?</string>
    <string name="login">LOGIN</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="write_a_comment">Write a comment ..</string>
    <string name="comments">Comments</string>
    <string name="cancel">Cancel</string>
    <string name="update_status">Update Status</string>
</resources>
