<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mycolor"
    tools:context="ps.exalt.facebook.login.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="78dp"
        android:src="@drawable/download" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/password_edit_text"
        android:layout_alignStart="@+id/password_edit_text"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="84dp"
        android:background="@color/cardview_light_background"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/email_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_edit_text"
        android:layout_alignStart="@+id/textView2" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:background="@color/cardview_light_background"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login"
        android:textColor="@color/mycolor" />

    <Button
        android:id="@+id/login_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_button"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:text="@string/create_an_acount"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_reg" />

</RelativeLayout>

