<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/cardview_light_background">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText3"
        android:layout_toEndOf="@+id/editText3"
        android:background="@drawable/back"
        android:enabled="false"
        android:text="@string/post"
        android:textColor="@color/write" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/btn"
        android:ems="10"
        android:hint="@string/write_a_comment"
        android:inputType="textPersonName"
        android:paddingEnd="20dp"
        android:paddingStart="15dp"
        android:textColor="@android:color/black" />
    <!-- List View -->
    <ListView
        android:id="@+id/comment_list"
        android:layout_width="fill_parent"
        android:layout_height="326dp"
        android:layout_marginTop="70dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="250dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/btn"
        app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/imageButton"
        android:layout_alignParentStart="true"
        android:background="@drawable/btn"
        android:paddingEnd="0dp"
        android:paddingStart="20dp"
        android:text="@string/comments" />
</RelativeLayout>